# rs-more

./: .gitignore  Cargo.toml  readme.md
src/: main.rs  reader.rs
test_dir/: short_text.txt
